k8s/overlays/staging/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warrior
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fiber-gateway
spec:
  replicas: 2
