k8s/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fiber-gateway
spec:
  rules:
    - host: stg.network.local
